[package]
name = "fixed_test"
version = "0.1.0"
authors = ["Srayan Jana <valorzard.kiko@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.fixed]
version = "1.7"
features = ["serde", "std", "serde-str", "num-traits"]

[dependencies]
fixed-sqrt = "0.2.4"
fixed-macro = "1.1.1"
num-traits = "0.2.14"